Fix attachment icon layout issues.

--- a/admin/src/app/foms/fom-add-edit/fom-add-edit.component.scss
+++ b/admin/src/app/foms/fom-add-edit/fom-add-edit.component.scss
@@ -42,8 +42,9 @@ form {
 }
 
 .vert-pipe {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  padding: 0;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
   display: inline-block;
   width: 1px;
   border-left: 1px solid #999;
